--- a/Server/package.json
+++ b/Server/package.json
@@ -10,9 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^4.0.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.9.11"
+    "mongoose": "^5.9.11",
+    "multer": "^1.4.2",
+    "validator": "^13.0.0"
   },
   "devDependencies": {
     "dotenv": "^8.2.0"
