--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,11 @@
     "bootstrap": "^4.4.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-elastic-carousel": "^0.4.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-validation": "^3.0.7",
+    "styled-components": "^5.1.0",
     "validator": "^13.0.0"
   },
   "scripts": {
