--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,10 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "mdbreact": "^4.26.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
+    "react-bootstrap-table-next": "^4.0.1",
     "react-dom": "^16.13.1",
     "react-elastic-carousel": "^0.4.1",
     "react-router-dom": "^5.1.2",
