--- a/Server/.env.example
+++ b/Server/.env.example
@@ -5,3 +5,4 @@ DB_DATABASE=goodReadsDB
 DB_USERNAME=root
 DB_PASSWORD=
 DB_PORT=27017
+USER_PICTURES=/home/rayman/Documents/Node/Project/client/public/users-profile-pics/
