--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "env-cmd": "^10.1.0",
+    "jwt-decode": "^2.2.0",
     "mdbreact": "^4.26.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
