modified some links in all books component and some paths in env.example

--- a/Server/.env.example
+++ b/Server/.env.example
@@ -5,4 +5,4 @@ DB_DATABASE=goodReadsDB
 DB_USERNAME=root
 DB_PASSWORD=
 DB_PORT=27017
-USER_PICTURES=/home/rayman/Documents/Node/Project/client/public/users-profile-pics/
+USER_PICTURES=../client/public/users-profile-pics/
