--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "3.4.1",
     "react-star-ratings": "^2.3.0",
     "react-validation": "^3.0.7",
+    "reactstrap": "^8.4.1",
     "styled-components": "^5.1.0",
     "validator": "^13.0.0"
   },
