Book Cover can be added in add book and only user can edit his profile

--- a/Server/.env.example
+++ b/Server/.env.example
@@ -6,3 +6,4 @@ DB_USERNAME=root
 DB_PASSWORD=
 DB_PORT=27017
 USER_PICTURES=../client/public/users-profile-pics/
+BOOKS_COVERS=../client/public/books-covers/
