--- a/Server/.env.example
+++ b/Server/.env.example
@@ -7,3 +7,4 @@ DB_PASSWORD=
 DB_PORT=27017
 USER_PICTURES=../client/public/users-profile-pics/
 BOOKS_COVERS=../client/public/books-covers/
+AUTHORS_PICS=../client/public/authors-pics/
