--- a/Server/.env.example
+++ b/Server/.env.example
@@ -8,3 +8,4 @@ DB_PORT=27017
 USER_PICTURES=../client/public/users-profile-pics/
 BOOKS_COVERS=../client/public/books-covers/
 AUTHORS_PICS=../client/public/authors-pics/
+REQUESTS_LOG=logs/Server-Requests-Logs.txt
