--- a/Server/.gitignore
+++ b/Server/.gitignore
@@ -1,8 +1,8 @@
 node_modules/
 .env
-public/upload/books/*
-public/upload/users/*
+public/upload/*
 config/auth.js
+logs/Server-Requests-Logs.txt
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
 # TypeScript cache
